# pypaper

./: .gitignore  AGENTS.md  PKGBUILD  README.md  image.py  main.py  monitor.py  pyproject.toml  theme.py
pypaper_app/: __main__.py  image.py  monitor.py  paths.py  theme.py  ui.py
